// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumbs clicking on the button should open a menu of subcategories 1`] = `
<div
  aria-label="sub-categories"
  class="sc-eDnVMP cEnzy"
  role="menu"
>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/adaptery-dlya-motoblokov"
    role="menuitem"
  >
    Адаптеры для мотоблоков
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/borony-motoblochnye"
    role="menuitem"
  >
    Бороны
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/grabli-motoblochnye"
    role="menuitem"
  >
    Грабли мотоблочные
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/granulyatory-kormoizmelchiteli-zernodrobilki"
    role="menuitem"
  >
    Грануляторы, кормоизмельчители, зернодробилки
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/gruntozatsepy"
    role="menuitem"
  >
    Грунтозацепы
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/izmelchiteli-vetok-i-drovokoly"
    role="menuitem"
  >
    Измельчители веток и дровоколы
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/kartofelesazhalki"
    role="menuitem"
  >
    Картофелесажалки
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/kopalki-dlya-kartofelya-i-chesnoka-motoblochnye"
    role="menuitem"
  >
    Копалки для картофеля и чеснока мотоблочные
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/kosilki-k-motoblokam"
    role="menuitem"
  >
    Косилки к мотоблокам
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/mulchirovateli-dlya-motoblokov"
    role="menuitem"
  >
    Мульчирователи для мотоблоков
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/nabory-dlya-pereoborudovaniya"
    role="menuitem"
  >
    Наборы для переоборудования
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/okuchniki-pidgortachi-i-kultivatory"
    role="menuitem"
  >
    Окучники (пiдгортачi) и культиваторы
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/opryskivateli-motoblochnye"
    role="menuitem"
  >
    Опрыскиватели мотоблочные
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/ploskorezy-propolniki"
    role="menuitem"
  >
    Плоскорезы (пропольники)
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/plugi-motoblochnye"
    role="menuitem"
  >
    Плуги
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/pritsepy-dlya-motoblokov-i-mototraktorov"
    role="menuitem"
  >
    Прицепы для мотоблоков и мототракторов
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/razbrasyvateli-udobreniy-motoblochnye"
    role="menuitem"
  >
    Разбрасыватели удобрений мотоблочные
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/seyalki-motoblochnye"
    role="menuitem"
  >
    Сеялки мотоблочные
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/frezy-nozhi-dlya-pochvofrezy"
    role="menuitem"
  >
    Фрезы, ножи для почвофрезы
  </a>
  <a
    class="sc-jSwlEQ kKXLnb"
    href="/catalog/motoblochnoe-navesnoe-oborudovanie/chesnochnye-sazhalki-dlya-motobloka"
    role="menuitem"
  >
    Чесночные сажалки
  </a>
</div>
`;

exports[`breadcrumbs should return breadcrumbs 1`] = `
<div>
  <div
    class="sc-bcPKhP ldiyQF"
  >
    <div
      aria-label="breadcrumbs"
      class="sc-grXZZQ cvUpwT"
      role="navigation"
    >
      <div
        class="sc-dkjKgF wQuRS"
      >
        <a
          class="sc-jSwlEQ kKXLnb"
          href="/catalog/motoblochnoe-navesnoe-oborudovanie"
        >
          Мотоблочное навесное оборудование
        </a>
        <div
          class="sc-hLclGa fytrDq"
          role="presentation"
        />
      </div>
      <div
        class="sc-dkjKgF wQuRS"
      >
        Адаптеры для мотоблоков
      </div>
    </div>
  </div>
</div>
`;

exports[`breadcrumbs should return breadcrumbs with detailed product 1`] = `
<div>
  <div
    class="sc-bcPKhP ldiyQF"
  >
    <div
      aria-label="breadcrumbs"
      class="sc-grXZZQ cvUpwT"
      role="navigation"
    >
      <div
        class="sc-dkjKgF wQuRS"
      >
        <a
          class="sc-jSwlEQ kKXLnb"
          href="/catalog/motoblochnoe-navesnoe-oborudovanie"
        >
          Мотоблочное навесное оборудование
        </a>
        <div
          class="sc-hLclGa fytrDq"
          role="presentation"
        />
      </div>
      <div
        class="sc-dkjKgF wQuRS"
      >
        <a
          class="sc-jSwlEQ kKXLnb"
          href="/catalog/motoblochnoe-navesnoe-oborudovanie/adaptery-dlya-motoblokov"
        >
          Адаптеры для мотоблоков
        </a>
      </div>
      <div
        class="sc-dkjKgF wQuRS"
      >
        Адаптер к мотоблоку "АРА"
      </div>
    </div>
  </div>
</div>
`;

exports[`breadcrumbs should return breadcrumbs with loader component 1`] = `
<div>
  <div
    class="sc-bcPKhP ldiyQF"
  >
    <div
      aria-label="breadcrumbs"
      class="sc-grXZZQ cvUpwT"
      role="navigation"
    >
      <div
        class="sc-dkjKgF wQuRS"
      >
        <a
          class="sc-jSwlEQ kKXLnb"
          href="/catalog/motoblochnoe-navesnoe-oborudovanie"
        >
          Мотоблочное навесное оборудование
        </a>
        <div
          class="sc-hLclGa fytrDq"
          role="presentation"
        />
      </div>
      <div
        class="sc-dkjKgF wQuRS"
      >
        <a
          class="sc-jSwlEQ kKXLnb"
          href="/catalog/motoblochnoe-navesnoe-oborudovanie/adaptery-dlya-motoblokov"
        >
          Адаптеры для мотоблоков
        </a>
      </div>
      <div
        class="sc-dkjKgF wQuRS"
      >
        <svg
          height="15px"
          role="img"
        >
          horizontal-loader.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
